add Decimal type

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ __pycache__
 */lib/mathlib/__pycache__
 */lib/unittest/__pycache__
 */lib/proglang/Int/__pycache__
+*/lib/proglang/Decimal/__pycache__
