--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ __pycache__
 */lib/unittest/__pycache__
 */lib/proglang/Int/__pycache__
 */lib/proglang/Decimal/__pycache__
+*/lib/proglang/String/__pycache__
