make list class

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ __pycache__
 */lib/proglang/Int/__pycache__
 */lib/proglang/Decimal/__pycache__
 */lib/proglang/String/__pycache__
+*/lib/proglang/List/__pycache__
