--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ __pycache__
 */lib/proglang/Decimal/__pycache__
 */lib/proglang/String/__pycache__
 */lib/proglang/List/__pycache__
+*/lib/proglang/Float/__pycache__
