adding class Dictionary

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ __pycache__
 */lib/proglang/String/__pycache__
 */lib/proglang/List/__pycache__
 */lib/proglang/Float/__pycache__
+*/lib/proglang/Dictionary/__pycache__
