--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ __pycache__
 */lib/proglang/List/__pycache__
 */lib/proglang/Float/__pycache__
 */lib/proglang/Dictionary/__pycache__
+*/lib/proglang/Set/__pycache__
