--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ __pycache__
 */lib/proglang/Float/__pycache__
 */lib/proglang/Dictionary/__pycache__
 */lib/proglang/Set/__pycache__
+*/lib/thread/a.out
